<resources>
    <string name="the_speakers_studio">The Speaker\'s Studio</string>
    <string name="ss_url">thespeakers-studio.com</string>

    <string name="app_version">Version %1$s</string>

    <string name="save">Save</string>

    <string name="about">About</string>
    <string name="curious">Curious for more?</string>
    <string name="app_name">The Speaker\'s Studio App</string>
    <string name="saved_presentations">Saved Presentations</string>
    <string name="action_reset_presentation">Reset Presentation</string>
    <string name="action_reset_outline">Reset Outline</string>
    <string name="action_change_color">Change Presentation Color</string>
    <string name="action_settings">Settings</string>
    <string name="presentations">Presentations</string>
    <string name="new_presentation">New Presentation</string>
    <string name="details">Details</string>
    <string name="landscape">Landscape</string>
    <string name="specifics">Specifics</string>
    <string name="content">Content</string>
    <string name="outline">Outline</string>
    <string name="timer">Timer</string>
    <string name="delete">Delete Presentation</string>
    <string name="stories">Stories</string>
    <string name="step_1">Step 1</string>
    <string name="step_2">Step 2</string>
    <string name="step_3">Step 3</string>
    <string name="step_4">Step 4</string>
    <string name="prompt_char_limit_sep"> / </string>
    <string name="datepicker_button_default">Choose Date</string>
    <string name="datetime_at">at</string>
    <string name="location_prompt">Select...</string>
    <string name="contactinfo_name_hint">Your Contact\'s Name</string>
    <string name="contactinfo_company_hint">Host Company</string>
    <string name="contactinfo_company_website_hint">Host Company\'s Website</string>
    <string name="contactinfo_phone_hint">Phone Number</string>
    <string name="contactinfo_email_hint">Email Address</string>
    <string name="custom_duration_hint">Duration (Minutes)</string>

    <string name="five_minutes">Five Minutes</string>
    <string name="ten_minutes">Ten Minutes</string>
    <string name="fifteen_minutes">Fifteen Minutes</string><!-- FIXME: this isn't being used? -->
    <string name="twenty_minutes">Twenty Minutes</string>
    <string name="thirty_minutes">Thirty Minutes</string>
    <string name="specify_duration">Specify Duration…</string>
    <string name="minutes">Minutes</string><!-- TODO: put a %1$s in here to include the time -->

    <string name="list_and">and</string>

    <string-array name="presentation_duration_array">
        <item>@string/five_minutes</item>
        <item>@string/ten_minutes</item>
        <item>@string/twenty_minutes</item>
        <item>@string/thirty_minutes</item>
        <item>@string/specify_duration</item>
    </string-array>

    <string name="cd_list_item_add">Add Item</string>
    <string name="cd_list_item_remove">Remove Item</string>
    <string name="cd_submenu">Options</string>
    <string name="cd_previous">Previous item</string>
    <string name="cd_next">Next item</string>
    <string name="cd_open_settings">Show or hide settings</string>
    <string name="cd_done">Done</string>

    <string name="drawer_open">The navigation drawer is opened</string>
    <string name="drawer_close">The navigation drawer is closed</string>

    <string name="search">Search</string>
    <string name="change_view">Change View</string>
    <string name="delete_all">Delete All Presentations</string>
    <string name="delete_selected">Delete Selected</string>

    <string name="confirm_reset_message">Are you sure you want to clear everything saved for this presentation? There is no turning back.</string>
    <string name="confirm_reset_step_only">Only clear this step, and leave the others alone.</string>
    <string name="confirm_reset_outline">Are you sure you want to clear all modifications to this outline? It will return to the default timing and layout.</string>
    <plurals name="confirm_delete_message">
        <item quantity="one">Are you sure you want to delete this presentation? You won\'t get it back.</item>
        <item quantity="other">Are you sure you want to delete these %d presentations? You won\'t get them back.</item>
    </plurals>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="confirm_delete_all_message">This action will delete all of the things.
        You will lose everything you have worked so hard to build. Are you sure?

        \n(Protip: you can select multiple presentations by pressing and holding on them,
        then you can delete several of them at once without losing everything)
    </string>

    <string name="progress_output">%1$s%% Complete</string>
    <string name="modified_output">Modified: %1$s</string>

    <string name="no_presentations">You have no saved presentations.</string>
    <string name="no_stories_placeholder">You cannot save stories just yet. I know, tell me about it.</string>
    <string name="no_saved_practices">You have not practiced this Presentation yet.</string>
    <string name="saved_practices_header">Your Practice History</string>
    <string name="no_saved_timers">Time waits for no man. Timers also wait for no man, because you can\'t save them yet.</string>

    <string name="practice_response_title">Practice Finished!</string>
    <string name="practice_response_view_title">Practice History</string>
    <string name="practice_response_rate_prompt">How did that practice go for you?</string>
    <string name="practice_response_notes_prompt">What thoughts do you have?</string>

    <plurals name="practice_response_outline_items">
        <item quantity="one">* This practice tracked %1$d duration change:</item>
        <item quantity="other">* This practice tracked %1$d duration changes:</item>
    </plurals>

    <string name="practice_response_cancel">Cancel</string>
    <string name="asterisk">*</string>

    <string name="practice_timestamp">Practice Finished: %1$s</string>

    <string name="curious_copy">Schedule a fifteen minute phone call, and we can figure out how The Speaker\'s Studio can make you a better you. Select a date and time below, and then you will be able to tell us a little about yourself.</string>

    <string name="outline_item_intro">Intro</string>
    <string name="outline_item_conclusion">Closing</string>
    <string name="outline_item_mention">Mention:</string>
    <string name="outline_item_mention_concat">Mention \"%1$s\"</string>

    <string name="practice_tracked_item_description">Section %1$s \"%2$s\" &gt; Subsection %3$s \"%4$s\" took <b>%5$s</b>.</string>

    <plurals name="text_time_display_seconds">
        <item quantity="zero"> </item>
        <item quantity="one">%1$d second</item>
        <item quantity="other">%1$d seconds</item>
    </plurals>

    <plurals name="text_time_display_minutes">
        <item quantity="zero"> </item>
        <item quantity="one">%1$d minute</item>
        <item quantity="other">%1$d minutes</item>
    </plurals>

    <string name="text_time_display_minutes_and_seconds">%1$s, %2$s</string>

    <string name="practice_presentation">Practice Presentation</string>

    <string name="get_ready">Get ready&#8230;</string>
    <string name="done">All done!</string>
    <string name="timer_output">%1$d:%2$02d</string>
    <string name="timer_output_negative">-%1$d:%2$02d</string>
    <string name="paused">Paused</string>
    <string name="five_minutes_left">Five Minutes Left</string>
    <string name="two_minutes_left">Two Minutes Left</string>

    <!-- Accessibility description for navigation drawer -->
    <string name="navdrawer_description_a11y">Navigation Drawer used to switch between major
        features of the application</string>

    <string name="timer_service_started">Timer</string>
    <string name="timer_service_description">%1$s - %2$s remaining</string>
    <string name="timer_service_description_time_only">%1$s remaining</string>
    <string name="timer_service_finished">Finished!</string>
    <string name="timer_service_finished_description">Touch here to return to the app.</string>

    <string name="lorem_ipsum_words">Lorem ipsum dolor sit</string>
    <string name="lorem_ipsum_sentence">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="lorem_ipsum_bullet">1. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="default_timer">00:00</string>
    <string name="return_to_list_of_questions">Return to List of Questions</string>
    <string name="edit_outline">Edit Outline</string>
    <string name="save_outline_to_google_drive">Save Outline to Google Drive</string>
    <string name="select">Select…</string>
    <string name="default_bullet">1.</string>
    <string name="default_completion">100\% Complete</string>
    <string name="default_modified">Modified: August 11, 2000 at some time in the night</string>
    <string name="default_char_count">15</string>
    <string name="default_char_max">150</string>

</resources>
