<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/default_padding">

    <Button
        android:id="@+id/button_outline"
        android:layout_alignParentBottom="true"
        android:text="@string/outline"
        style="@style/StepListButton"
        android:background="@drawable/transition_outline_button"
        />

    <com.thespeakers_studio.thespeakersstudioapp.ui.StepListView
        style="@style/StepListView"
        android:id="@+id/step_list"
        app:progressColor="?colorPrimary">

        <LinearLayout
            android:id="@+id/step_1"
            style="@style/StepListItem">
            <TextView
                android:id="@+id/step_1_label"
                android:text="@string/step_1"
                android:visibility="invisible"
                style="@style/StepListLabel" />
            <TextView
                android:id="@+id/step_1_text"
                android:text="@string/details"
                android:visibility="invisible"
                style="@style/StepListText"
            />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/step_2"
            style="@style/StepListItem">
            <TextView
                android:id="@+id/step_2_label"
                android:text="@string/step_2"
                android:visibility="invisible"
                style="@style/StepListLabel" />
            <TextView
                android:id="@+id/step_2_text"
                android:text="@string/landscape"
                android:visibility="invisible"
                style="@style/StepListText"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/step_3"
            style="@style/StepListItem">
            <TextView
                android:id="@+id/step_3_label"
                android:text="@string/step_3"
                android:visibility="invisible"
                style="@style/StepListLabel" />
            <TextView
                android:id="@+id/step_3_text"
                android:text="@string/specifics"
                android:visibility="invisible"
                style="@style/StepListText"
            />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/step_4"
            style="@style/StepListItem">
            <TextView
                android:id="@+id/step_4_label"
                android:text="@string/step_4"
                android:visibility="invisible"
                style="@style/StepListLabel" />
            <TextView
                android:id="@+id/step_4_text"
                android:text="@string/content"
                android:visibility="invisible"
                style="@style/StepListText"
            />
        </LinearLayout>

    </com.thespeakers_studio.thespeakersstudioapp.ui.StepListView>

</RelativeLayout>