<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <!--
    Name
    Email
    Phone
    -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/name_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contactinfo_name_hint"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/company_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/company_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contactinfo_company_hint"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/email_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contactinfo_email_hint"
            android:inputType="textEmailAddress"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/phone_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/phone_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contactinfo_phone_hint"
            android:inputType="phone"
            />
    </android.support.design.widget.TextInputLayout>

</merge>