<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:padding="@dimen/spacing_16"
    android:orientation="vertical">

    <android.support.v7.widget.AppCompatRatingBar
        android:isIndicator="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/practice_rating" />

    <TextView
        android:id="@+id/practice_contains_outline_items"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/practice_rating"
        android:text="@string/asterisk"
        android:textColor="?colorAccent"
        android:textSize="25sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/practice_rating">

        <TextView
            android:id="@+id/practice_timestamp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/practice_timestamp"
            style="@style/PracticeListCardTimestamp" />

        <TextView
            android:id="@+id/practice_response_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_8"
            android:text="@string/lorem_ipsum_sentence" />

        <TextView
            android:id="@+id/outline_items_count"
            android:layout_marginTop="@dimen/spacing_16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?colorAccent"
            android:text="@string/practice_response_outline_items" />

        <android.support.v7.widget.ListViewCompat
            android:id="@+id/outline_items_list"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/spacing_16" />

    </LinearLayout>

</RelativeLayout>