<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/PresentationListCard.OneColumn"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:visibility="gone"
            android:id="@+id/presentation_submenu"
            style="@style/PresentationListCardSubmenu"
            android:contentDescription="@string/cd_submenu"
            />

        <android.support.v7.widget.AppCompatRatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="@integer/rating_star_count"
            android:layout_centerInParent="true"
            android:isIndicator="true"
            android:id="@+id/practice_rating"
            />

        <TextView
            android:id="@+id/practice_contains_outline_items"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/practice_rating"
            android:layout_toEndOf="@id/practice_rating"
            android:text="@string/asterisk"
            android:textColor="?colorAccent"
            android:layout_marginTop="@dimen/spacing_8"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/practice_timestamp"
            android:text="@string/practice_timestamp"
            style="@style/PracticeListCardTimestamp"
            />

    </RelativeLayout>

</android.support.v7.widget.CardView>